Fix figure spacing

--- a/css/common.css
+++ b/css/common.css
@@ -145,8 +145,8 @@ figure {
 
 figure img {
     display: block;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    margin-top: calc(var(--body-leading) + 0.5rem);
+    margin-bottom: 0.5rem;
     box-shadow: 0 0 0 1px var(--divider-color);
 }
 
